Refactoring ProductController